lib/common/utils.h

G_BEGIN_DECLS

typedef struct
{
    guint processed;
    guint total;
    gchar *message;
}
ProgressData;
gint get_file_owner (const gchar *filepath);
gint natural_sort (const gchar *s1, const gchar *s2);
gboolean exists (const gchar *filepath);
gboolean is_dir (const gchar *filepath);
gchar * get_file_extension (const gchar *filepath);
gchar * get_local_time (void);
gchar * get_user_font_directory (void);
gchar * get_package_cache_directory (void);
gchar * get_package_config_directory (void);
gchar * get_user_fontconfig_directory (void);
gchar * to_filename (const gchar *str);
GSettings * get_gsettings (const gchar *schema_id);