lib/common/FontManager.vapi

		[NoAccessorMethod]
		public abstract string comment { owned get; set; }
		[NoAccessorMethod]
		public abstract string icon { owned get; set; }
		[NoAccessorMethod]
		public abstract int index { get; set; }
		[NoAccessorMethod]
		public abstract string name { owned get; set; }
		[NoAccessorMethod]
		public abstract int size { get; }
	}
	[CCode (cheader_filename = "font-manager-json-proxy.h", type_cname = "FontManagerJsonProxyInterface", type_id = "font_manager_json_proxy_get_type ()")]
	public interface JsonProxy : GLib.Object {
		[NoAccessorMethod]
		public abstract Json.Object source_object { owned get; set; }
	}
	[CCode (cheader_filename = "font-manager-orthography.h", cname = "OrthographyData", has_type_id = false)]
	public struct OrthographyData {
		public weak string name;
		public weak string native;
		public unichar key;
		public weak string sample;
		[CCode (array_length = false)]
		public weak string pangram[10];
		[CCode (array_length = false)]
		public weak unichar values[4096];
	}
	[CCode (cheader_filename = "utils.h", cname = "ProgressData", has_type_id = false)]
	public struct ProgressData {
		public uint processed;
		public uint total;
		public weak string message;
	}
	[CCode (cheader_filename = "font-manager-database.h", cprefix = "FONT_MANAGER_DATABASE_TYPE_", has_type_id = false)]
	public enum DatabaseType {
		BASE,
		FONT,
		METADATA,
		ORTHOGRAPHY
	}
	[CCode (cheader_filename = "font-manager-font-model.h", cprefix = "FONT_MANAGER_FONT_MODEL_", has_type_id = false)]
	public enum FontModelColumn {
		OBJECT,
		NAME,
		DESCRIPTION,
		COUNT,
		N_COLUMNS
	}
	[CCode (cheader_filename = "font-manager-properties.h", cprefix = "FONT_MANAGER_PROPERTIES_TYPE_", has_type_id = false)]
	public enum PropertiesType {
		DEFAULT,
		DISPLAY
	}
	[CCode (cheader_filename = "font-manager-database.h", cprefix = "FONT_MANAGER_DATABASE_ERROR_")]
	public errordomain DatabaseError {
		OK,
		ERROR,
		INTERNAL,
		PERM,
		ABORT,
		BUSY,
		LOCKED,
		NOMEM,
		READONLY,
		INTERRUPT,
		IOERR,
		CORRUPT,
		NOTFOUND,
		FULL,
		CANTOPEN,
		PROTOCOL,
		EMPTY,
		SCHEMA,
		TOOBIG,
		CONSTRAINT,
		MISMATCH,
		MISUSE,
		NOLFS,
		AUTH,
		FORMAT,
		RANGE,
		NOTADB,
		NOTICE,
		WARNING,
		ROW,
		DONE
	}
	[CCode (cheader_filename = "utils.h", has_target = false)]
	public delegate bool ProgressCallback (FontManager.ProgressData data);
	[CCode (cheader_filename = "font-manager-database.h", cname = "FONT_MANAGER_CURRENT_DATABASE_VERSION")]
	public const int CURRENT_DATABASE_VERSION;
	[CCode (cheader_filename = "font-manager-orthography.h", cname = "END_OF_DATA")]
	public const int END_OF_DATA;
	[CCode (cheader_filename = "font-manager-orthography.h", cname = "START_RANGE_PAIR")]
	public const int START_RANGE_PAIR;
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "add_application_font")]
	public static bool add_application_font (string filepath);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "add_application_font_directory")]
	public static bool add_application_font_directory (string dir);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "clear_application_fonts")]
	public static void clear_application_fonts ();
	[CCode (cheader_filename = "json.h", cname = "compare_json_font_node")]
	public static int compare_json_font_node (Json.Node node_a, Json.Node node_b);
	[CCode (cheader_filename = "json.h", cname = "compare_json_int_member")]
	public static int compare_json_int_member (string member_name, Json.Object a, Json.Object b);
	[CCode (cheader_filename = "json.h", cname = "compare_json_string_member")]
	public static int compare_json_string_member (string member_name, Json.Object a, Json.Object b);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "enable_user_font_configuration")]
	public static bool enable_user_font_configuration (bool enable);
	[CCode (cheader_filename = "utils.h", cname = "exists")]
	public static bool exists (string filepath);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_attributes_from_filepath")]
	public static Json.Object get_attributes_from_filepath (string filepath, int index);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_available_fonts")]
	public static Json.Object get_available_fonts (string? family_name);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_available_fonts_for_chars")]
	public static Json.Object get_available_fonts_for_chars (string chars);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_available_fonts_for_lang")]
	public static Json.Object get_available_fonts_for_lang (string lang_id);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_charset_from_filepath")]
	public static GLib.List<weak unichar>? get_charset_from_filepath (string filepath, int index);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "get_charset_from_font_object")]
	public static GLib.List<weak unichar>? get_charset_from_font_object (Json.Object font_object);
	[CCode (cheader_filename = "font-manager-database.h")]
	public static FontManager.Database get_database (FontManager.DatabaseType type) throws FontManager.DatabaseError;
	[CCode (cheader_filename = "font-manager-freetype.h")]
	public static long get_face_count (string filepath);
	[CCode (cheader_filename = "utils.h", cname = "get_file_extension")]
	public static string? get_file_extension (string filepath);
	[CCode (cheader_filename = "utils.h", cname = "get_file_owner")]
	public static int get_file_owner (string filepath);
	[CCode (cheader_filename = "utils.h", cname = "get_gsettings")]
	public static GLib.Settings? get_gsettings (string schema_id);
	[CCode (cheader_filename = "utils.h", cname = "get_local_time")]
	public static string? get_local_time ();
	[CCode (cheader_filename = "font-manager-database.h")]
	public static void get_matching_families_and_fonts (FontManager.Database db, FontManager.StringHashset families, FontManager.StringHashset fonts, string sql) throws FontManager.DatabaseError;
	[CCode (cheader_filename = "font-manager-freetype.h")]
	public static Json.Object get_metadata (string filepath, int index);
	[CCode (cheader_filename = "font-manager-orthography.h")]
	public static Json.Object? get_orthography_results (Json.Object? font);
	[CCode (cheader_filename = "utils.h", cname = "get_package_cache_directory")]
	public static string? get_package_cache_directory ();
	[CCode (cheader_filename = "utils.h", cname = "get_package_config_directory")]
	public static string? get_package_config_directory ();
	[CCode (cheader_filename = "font-manager-orthography.h")]
	public static string? get_sample_string_for_orthography (Json.Object orthography, GLib.List<uint>? charset);
	[CCode (cheader_filename = "utils.h", cname = "get_user_font_directory")]
	public static string? get_user_font_directory ();
	[CCode (cheader_filename = "utils.h", cname = "get_user_fontconfig_directory")]
	public static string? get_user_fontconfig_directory ();
	[CCode (cheader_filename = "utils.h", cname = "is_dir")]
	public static bool is_dir (string filepath);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "list_available_font_families")]
	public static GLib.List<string>? list_available_font_families ();
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "list_available_font_files")]
	public static GLib.List<string>? list_available_font_files ();
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "list_font_directories")]
	public static GLib.List<string>? list_font_directories (bool recursive);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "list_user_font_directories")]
	public static GLib.List<string>? list_user_font_directories ();
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "load_font_configuration_file")]
	public static bool load_font_configuration_file (string filepath);
	[CCode (cheader_filename = "json.h", cname = "load_json_file")]
	public static Json.Node? load_json_file (string filepath);
	[CCode (cheader_filename = "utils.h", cname = "natural_sort")]
	public static int natural_sort (string s1, string s2);
	[CCode (cheader_filename = "json.h", cname = "print_json_array")]
	public static string print_json_array (Json.Array json_arr, bool pretty);
	[CCode (cheader_filename = "json.h", cname = "print_json_object")]
	public static string print_json_object (Json.Object json_obj, bool pretty);
	[CCode (cheader_filename = "json.h", cname = "set_json_error")]
	public static void set_json_error (Json.Object json_obj, int err_code, string err_msg);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "sort_json_font_listing")]
	public static Json.Array sort_json_font_listing (Json.Object json_obj);
	[CCode (cheader_filename = "json.h", cname = "str_list_to_json_array")]
	public static Json.Array str_list_to_json_array (GLib.List<string> slist);
	[CCode (cheader_filename = "font-manager-database.h")]
	public static async bool sync_database (FontManager.Database db, FontManager.DatabaseType type, FontManager.ProgressCallback? progress, GLib.Cancellable? cancellable) throws FontManager.DatabaseError, GLib.Error;
	[CCode (cheader_filename = "utils.h", cname = "to_filename")]
	public static string? to_filename (string str);
	[CCode (cheader_filename = "font-manager-fontconfig.h", cname = "update_font_configuration")]
	public static bool update_font_configuration ();
	[CCode (cheader_filename = "json.h", cname = "write_json_file")]
	public static bool write_json_file (Json.Node root, string filepath);
}
